src/app/reviews/reviews.component.scss
.profile-image {
  border-radius: 50%;
  max-width: 300px;
  margin: 32px;
}

.responsive {
  position: relative;
  display: block;
  height: 0;
  padding: 0;
  overflow: hidden;
}

.responsive iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  border: 0;
}

.video {
  padding-bottom: 56.25%;  /* or 75% depending upon the type of video you have */
}

.video-container {
  padding-top: 10px;
}

.width100 {
  width: 100%;
}

fa-icon {
  color: var(--color-grey);
}

.Name {
  font-size: 40px;
  font-weight: 480;
  color: var(--color-primary);
  padding: 20px 0px;
}


.socials-links {
  position: relative;
  padding: 5px 10px;
}

h3 {
  margin: 0
}


.text-black {
  color: black;
}

.link-icon-style-orange {
  color: var(--color-accent);
}

.link-icon-style-green {
  color: var(--color-primary);
}

.link-style-green:hover {
  cursor:pointer;
}

.link-style-green, .link-style-green:visited {
	text-decoration: none;
	position: relative;
	&:after {
		content: '';
		height: 2px;
		position: absolute;
		bottom: 0;
		left: 0;
		width: 0%;
		background: var(--color-primary);
		transition: 0.2s;
    z-index: 1111;
	}

	&:hover:after {
		width: 100%;
	}

	&.block {
		display: block;
		padding: 0.5em;

		&:hover {
		}
	}
}

.link-style-orange:hover {
  cursor:pointer;
}

.link-style-orange, .link-style-orange:visited {
	text-decoration: none;
	position: relative;
  font-weight: 500;
  color: var(--color-accent);
	&:after {
		content: '';
		height: 2px;
		position: absolute;
		bottom: 0;
		left: 0;
		width: 0%;
		background: var(--color-accent);
		transition: 0.2s;
    z-index: 1111;
	}

	&:hover:after {
		width: 100%;
	}

	&.block {
		display: block;
		padding: 0.5em;

		&:hover {
		}
	}
}


.left-titles {
  margin-bottom: 0;
  color: var(--color-primary);
  font-weight: 520;

  &--hidden {
    @extend .left-titles;
    color: transparent;
  }
}

.text-area {
  margin-top: 5px;
}

.item-title {
  margin: 0;
  margin-bottom: 3px;
  font-weight: 520;
  font-size: 20px;
}

.item-subtitle {
  color: var(--color-primary);
  font-weight: 520;
  margin: 0;
}

.icon-right-margin {
  margin-right: 5px;

  &--left {
    @extend .icon-right-margin;
    margin-left: 40px;
  }
}

.separator {
  border: 0;
  border-bottom: 1px dashed var(--color-light-grey);
  background: #999;
  width: 100%;

  &--small {
    @extend .separator;
    width: 80%;
  }
}

.item-content {
  margin: 0;
  margin-top: 3px;
}

.text-align-center {
  text-align: center;
}

.text-align-left {
  text-align: left;
}

.item-date-loc {
  margin: 0;
}

.underline-title {
  border-bottom: 3px solid var(--color-primary);;

  &--top {
    @extend .underline-title;
    width: 100%;
  }
}

.item {
  margin: 5px 0px;
}

.small-margin {
  margin: 0px 60px;

  &--xs {
    @extend .small-margin;
    margin: 0px 10px;
  }
}

